[gd_scene load_steps=3 format=3 uid="uid://di73pw8j36uwi"]

[ext_resource type="FontFile" uid="uid://cqyiip1ldq5u1" path="res://Art/Minecraft.ttf" id="1_0qvxp"]
[ext_resource type="Script" path="res://Scene/UI/popup.gd" id="1_jvo07"]

[node name="Popup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jvo07")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="PanelContainer"]
layout_mode = 2
color = Color(0.180392, 0.180392, 0.180392, 0.858824)

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Container" type="HBoxContainer" parent="PanelContainer/VBoxContainer2"]
layout_mode = 2

[node name="QualityLabel" type="Label" parent="PanelContainer/VBoxContainer2/Container"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_0qvxp")
text = "[QualityLabel]"

[node name="TypeLabel" type="Label" parent="PanelContainer/VBoxContainer2/Container"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_0qvxp")
text = "[TypeLabel]"

[node name="GemLabel" type="Label" parent="PanelContainer/VBoxContainer2/Container"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_0qvxp")
text = "[GemLabel]"

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer2"]
layout_mode = 2

[node name="PowerLabel" type="Label" parent="PanelContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_0qvxp")
text = "[GemLabel]"
